--- a/readme
+++ b/readme
@@ -5,7 +5,7 @@ sudo apt-get install mysql-client
 # For python and related frameworks
 
 cd /home/ubuntu/
-sudo apt-get -y update && sudo apt-get -y update
+sudo apt-get -y update 
 sudo apt install -y git
 git clone https://github.com/abhayrdhyani/AWS-RDS-S3.git
 cd AWS-RDS-S3/
